143-wallet: Account: 登陆一个邮箱注册的乐视账号，点击激活了有π，显示异常
Ticket: LEUIAPP-2024

Root cause : 在H5绑定之后，我的乐视未拿到绑定的手机号（此功能还在开发中）

Solution: 以服务器返回错误码为准；

          修改实名认证 menu ” 跳过“ 字体大小颜色；

          修改webview 主题titleColor ；

Change-Id: Ibdbbe657b5c2e6f0ee0abac8c935f1eba87ebf1a
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/values/styles.xml
+++ b/LePay/res/values/styles.xml
@@ -109,4 +109,10 @@
         <item name="android:fontFamily">sans-serif</item>
     </style>
 
+    <style name="TextAppearance.LeEcoMenuTextAppearance" parent="Wallet.TextAppearance">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
 </resources>
