--- a/LePay/res/layout/lepay_channel_view.xml
+++ b/LePay/res/layout/lepay_channel_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/pay_channel_v_height">
 
@@ -96,10 +96,18 @@
 
     </LinearLayout>
 
-    <com.letv.shared.widget.LeLoadingView
-        android:id="@+id/loading"
-        android:layout_width="48dip"
-        android:layout_height="48dip"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
-</RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/loading_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:visibility="gone">
+
+        <com.letv.shared.widget.LeLoadingView
+            android:id="@+id/loading"
+            android:layout_width="48dip"
+            android:layout_height="48dip"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+    </RelativeLayout>
+</FrameLayout>
