143-wallet: Account: 【我的乐视】【必现】实名认证界面，“跳过、查看支持银行、获取验证码”按钮没有点击效果
Ticket: LEUIAPP-1936

Root cause : no;

Solution: 修改textview Style； 修改parseColor默认值为0（透明）， -1（为白色）；

Change-Id: I8f4263e65a28e3b92f5b1edb063f6b6386297fc3
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/layout/account_verify_activity.xml
+++ b/LePay/res/layout/account_verify_activity.xml
@@ -167,6 +167,7 @@
                 android:layout_weight="1.0"
                 android:lineSpacingExtra="2dp"
                 android:textSize="14sp"
+                android:longClickable="false"
                 android:textColor="@color/account_verify_text_hint_color" />
 
         </LinearLayout>
