--- a/LePay/res/values/styles.xml
+++ b/LePay/res/values/styles.xml
@@ -16,7 +16,7 @@
     </style>
 
     <style name="AccountVerifyTextStyle" >
-        <item name="android:textColor">#447DE9</item>
+        <item name="android:textColor">@color/account_verify_tv_color</item>
         <item name="android:textSize">14sp</item>
     </style>
 
