--- a/LetvWallet/res/values/string_mobile.xml
+++ b/LetvWallet/res/values/string_mobile.xml
@@ -7,7 +7,7 @@
     <string name="label_mobile_def_desc" translatable="false">(%s)</string>
     <string name="label_mobile_deposite">Top-up amount</string>
     <string name="label_mobile_flow_deposite">Top-up limit</string>
-    <string name="label_mobile_flow_entrance_deposite">Flow recharge</string>
+    <string name="label_mobile_flow_entrance_deposite">Data top-up</string>
     <string name="label_mobile_product_price">Price: </string>
     <string name="label_mobile_product_unit_fee">RMB</string>
     <string name="label_mobile_product_unit_flow">MB</string>
