143-wallet: 解决推荐页面图片显示不全的问题
RootCause: 由于option默认为center_crop导致

Solution：设置adjustViewBounds属性

Ticket: LEUIAPP-2449

Change-Id: I06cf9d4fb22ef2f514cf9242b1f1ad3d5f0af8e4
Signed-off-by: liuliang6 <liuliang6@le.com>

--- a/LetvWallet/res/layout/main_recommend_cardview_d.xml
+++ b/LetvWallet/res/layout/main_recommend_cardview_d.xml
@@ -19,6 +19,7 @@
         android:background="@color/colorPlaceHolderBg"
         android:alpha="@dimen/le_img_alpha"
         android:scaleType="fitStart"
+        android:adjustViewBounds="true"
         app:corner_radius="2dp"
         app:border_width="0dp"
         app:round_background="true"
